syntax = "proto3";
import "proto/change.proto";
package gink;

message Bundle {

    // Typically only set in the first bundle of a chain.
    string identity = 1;

    repeated Change changes = 2;

    // Only set in the first bundle in a chain.
    bytes verify_key = 3;

    uint64 timestamp = 4;  // microseconds since epoch

    uint64 chain_start = 5;  // timestamp of the first bundle in a chain

    // implementations must accept any medallion > 0 and < 2**52
    // but should only generated medallions in the range 281474976710656 to 562949953421311
    uint64 medallion = 6;

    uint64 previous = 7; // timestamp of the previous bundle in this chain

    // Set in every bundle except for the first in a chain.
    bytes prior_hash = 8;  // the sha256 of the prior bundle

    uint64 key_id = 9;

    bytes encrypted = 10;

    string comment = 11;

}
